versions/26.1.2/translated/it_it/develop/text-and-translations.md
---
title: Testo e Traduzioni
description: Documentazione esaustiva riguardo alla gestione di testo e traduzioni formattate in Minecraft.
authors:
  - IMB11
  - LordEnder-Kitty
resources:
  https://docs.neoforged.net/docs/resources/client/i18n/: I18n e L10n - NeoForge Docs (EN, tranne la generazione)
---

<!-- markdownlint-configure-file { MD033: { allowed_elements: [br, ColorSwatch, u] } } -->

Ogni volta che Minecraft mostra testo nel gioco, è con tutta probabilità definito da un oggetto `Component`.
Questo tipo personalizzato è preferito ad una `String` per permettere formattazione più avanzata, che comprende colori, grassetto, offuscamento, ed eventi ai clic. Permettono inoltre accesso più semplice al sistema di traduzione, rendendo semplice la traduzione di qualsiasi elemento dell'interfaccia.

Se hai mai lavorato con datapack o con funzioni prima d'ora, potresti notare similarità con il formato testo json usato per i displayName, i libri, e i cartelli tra le altre cose. Come probabilmente riuscirai ad indovinare, quella è solo una rappresentazione json di un oggetto `Component`, e può essere convertita tramite `Component.Serializer`.

Quando si crea una mod, si preferisce generalmente costruire i tuoi oggetti `Component` direttamente nel codice, sfruttando ove possibile le traduzioni.

## Componenti Testuali Letterali {#literal-text-components}

Il modo più semplice di creare un oggetto `Component` è creare un testo letterale. Questa è proprio solo una stringa che verrà visualizzata com'è, senza alcuna formattazione predefinita.

Questi sono creati tramite i metodi `Component.nullToEmpty` o `Component.literal`, che agiscono in modi un po' diversi. `Component.nullToEmpty` accetta null come input, e restituirà un'istanza di `Component`. Viceversa, `Component.literal` deve non ricevere come input null, ma restituisce un `MutableComponent`, che è una sotto-classe di `Component` facilmente stilizzata e concatenata. Ne parleremo di più dopo.

```java
Component literal = Component.nullToEmpty("Hello, world!");
MutableComponent mutable = Component.literal("Hello, world!");
// Keep in mind that a MutableComponent can be used as a Component, making this valid:
Component mutableAsText = mutable;
```

## Componenti Testuali Traducibili {#translatable-text-components}

Se volessi fornire traduzioni multiple della stessa stringa di testo, puoi usare il metodo `Component.translatable` per fare riferimento ad una chiave di traduzione in qualsiasi file lingua. Se la chiave di traduzione non esistesse, verrebbe convertita in testo letterale.

```java
Component translatable = Component.translatable("example-mod.text.hello");

// Similarly to literals, translatable text can be easily made mutable.
MutableComponent mutable = Component.translatable("example-mod.text.bye");
```

Il file di lingua, `en_us.json`, ha il seguente aspetto:

```json
{
  "example-mod.text.hello": "Hello!",
  "example-mod.text.bye": "Goodbye :("
}
```

Se volessi usare variabili nella traduzione, in maniera simile a come i messaggi di morte ti permettodo di usare i giocatori e gli oggetti coinvolti nella traduzione, puoi aggiungere queste variabili come parametri. Puoi aggiungerne quanti ne vuoi.

```java
Component translatable = Component.translatable("example-mod.text.hello", player.getDisplayName());
```

Puoi fare riferimento a queste variabili nella traduzione così:

```json
{
  "example-mod.text.hello": "%1$s said hello!"
}
```

Nel gioco, `%1$s` sarà sostituito dal nome del giocatore a cui hai fatto riferimento nel codice. Usare `player.getDisplayName()` farà in modo che certe informazioni aggiuntive sull'entità appaiano in un tooltip mentre si passa il mouse sopra al nome nel messaggio in chat, e ciò in contrasto con `player.getName()`, che mostrerà comunque il nome, ma non i dettagli aggiuntivi. Qualcosa di simile si può fare con gli itemStack, usando `stack.getDisplayName()`.

Per quanto riguarda il significato di `%1$s`, ti basti sapere che il numero corrisponde a quale variabile provi ad usare. Immagina di usare tre variabili.

```java
Component translatable = Component.translatable("example-mod.text.whack.item", victim.getDisplayName(), attacker.getDisplayName(), itemStack.toHoverableText());
```

Se vuoi fare riferimento a ciò che, nel nostro caso, è l'attaccante, useresti `%2$s` perché è la seconda variabile che abbiamo passato. Allo stesso modo, `%3$s` fa riferimento all'itemStack. Una traduzione con questo numero di parametri aggiuntivi potrebbe avere questo aspetto:

```json
{
  "example-mod.text.whack.item": "%1$s was whacked by %2$s using %3$s"
}
```

## Serializzare Testo {#serializing-text}

<!-- NOTE: These have been put into the example mod as they're likely to be updated to codecs in the next few updates. -->

Come già accennato prima, puoi serializzare testo a JSON con il codec di testo. Per maggiori informazioni, vedi la pagina sui [Codec](./codecs).

<<< @/reference/26.1.2/src/client/java/com/example/docs/rendering/TextTests.java#component_to_string

Questo produce JSON che può essere usato in datapack, comandi e altri posti che accettano il formato JSON di testo invece che il formato letterale o traducibile.

## Deserializzare Testo {#deserializing-text}

Inoltre, per deserializzare un oggetto testo da JSON a un oggetto della classe `Component`, di nuovo, usa il codec.

<<< @/reference/26.1.2/src/client/java/com/example/docs/rendering/TextTests.java#string_to_component

## Formattare Testo {#formatting-text}

Forse sei familiare con gli standard di formattazione di Minecraft:

Puoi applicare questi stili di formattazione usando l'enum `ChatFormatting` sulla classe `MutableComponent`:

```java
MutableComponent result = Component.literal("Hello World!")
  .withStyle(ChatFormatting.AQUA, ChatFormatting.BOLD, ChatFormatting.UNDERLINE);
```

|              Colore             | Nome                             | Codice in Chat | Codice MOTD | Codice Hex |
| :-----------------------------: | -------------------------------- | :------------: | :---------: | :--------: |
| <ColorSwatch color="#000000" /> | Nero<br />`black`                |      `§0`      |  `\u00A70` |  `#000000` |
| <ColorSwatch color="#0000AA" /> | Blu Scuro<br />`dark_blue`       |      `§1`      |  `\u00A71` |  `#0000AA` |
| <ColorSwatch color="#00AA00" /> | Verde Scuro<br />`dark_green`    |      `§2`      |  `\u00A72` |  `#00AA00` |
| <ColorSwatch color="#00AAAA" /> | Ciano Scuro<br />`dark_aqua`     |      `§3`      |  `\u00A73` |  `#00AAAA` |
| <ColorSwatch color="#AA0000" /> | Rosso Scuro<br />`dark_red`      |      `§4`      |  `\u00A74` |  `#AA0000` |
| <ColorSwatch color="#AA00AA" /> | Viola Scuro<br />`dark_purple`   |      `§5`      |  `\u00A75` |  `#AA00AA` |
| <ColorSwatch color="#FFAA00" /> | Oro<br />`gold`                  |      `§6`      |  `\u00A76` |  `#FFAA00` |
| <ColorSwatch color="#AAAAAA" /> | Grigio<br />`gray`               |      `§7`      |  `\u00A77` |  `#AAAAAA` |
| <ColorSwatch color="#555555" /> | Grigio Scuro<br />`dark_gray`    |      `§8`      |  `\u00A78` |  `#555555` |
| <ColorSwatch color="#5555FF" /> | Blu<br />`blue`                  |      `§9`      |  `\u00A79` |  `#5555FF` |
| <ColorSwatch color="#55FF55" /> | Verde<br />`green`               |      `§a`      |  `\u00A7a` |  `#55FF55` |
| <ColorSwatch color="#55FFFF" /> | Ciano<br />`aqua`                |      `§b`      |  `\u00A7b` |  `#55FFFF` |
| <ColorSwatch color="#FF5555" /> | Rosso<br />`red`                 |      `§c`      |  `\u00A7c` |  `#FF5555` |
| <ColorSwatch color="#FF55FF" /> | Viola Chiaro<br />`light_purple` |      `§d`      |  `\u00A7d` |  `#FF55FF` |
| <ColorSwatch color="#FFFF55" /> | Giallo<br />`yellow`             |      `§e`      |  `\u00A7e` |  `#FFFF55` |
| <ColorSwatch color="#FFFFFF" /> | Bianco<br />`white`              |      `§f`      |  `\u00A7f` |  `#FFFFFF` |
|                                 | Resetta                          |      `§r`      |             |            |
|                                 | **Grassetto**                    |      `§l`      |             |            |
|                                 | ~~Barrato~~                      |      `§m`      |             |            |
|                                 | <u>Sottolineato</u>              |      `§n`      |             |            |
|                                 | _Corsivo_                        |      `§o`      |             |            |
|                                 | Offuscato                        |      `§k`      |             |            |
